# ml-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  app_fastapi.py  app_grpc.py  config.py  docker-compose.yml  experiment.py  loaders.py  model_manager.py  pyproject.toml
core/: loaders.py  model_manager.py
examples/: grpc_example_usage.ipynb  rest_api_example_usage.ipynb
grpc_protobuf/: __init__.py  model_manager_grpc.proto  model_manager_grpc_pb2.py  model_manager_grpc_pb2_grpc.py
prometheus/: prometheus.yml  prometheus_write.py
provisioning/dashboards/: Resources-1731247025999.json  dashboards.yaml
provisioning/datasources/: datasources.yaml
provisioning/plugins/: plugins.yaml
resources/: experiment.py  loaders.py  model_manager.py
template_experiments/3a71e9aa-40cd-4ea6-a41b-0476ded16a4c/: metadata  model.pt
template_experiments/9cfbb98a-2d85-4a71-8d90-c1b308d739b9/: metadata
template_experiments/c2d945f2-946e-4112-8d68-077b52d02528/: metadata
templates/: index.html
tests/: conftest.py  fixtures.py  test_model_manager_locally.py  test_model_manager_rest_api.py
