[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = "Web app to train/store/tune ml models"
authors = ["il.pugin <il.pugin@tbank.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
mlflow = "^2.17.2"
torch = "^2.5.1"
grpcio = "^1.67.1"
pyyaml = "^6.0.2"
pydantic = "^2.9.2"
tqdm = "^4.66.6"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
